[gd_scene load_steps=10 format=3 uid="uid://bvjdtq7spj5ke"]

[ext_resource type="PackedScene" uid="uid://cv3ormx72e1e6" path="res://player.tscn" id="1_8fu5u"]
[ext_resource type="Script" path="res://main.gd" id="1_nc4gg"]
[ext_resource type="PackedScene" uid="uid://drajqcu3ln08v" path="res://food.tscn" id="2_lergq"]
[ext_resource type="PackedScene" uid="uid://b0002gdwroaw4" path="res://mob.tscn" id="3_eoloe"]
[ext_resource type="PackedScene" uid="uid://dadil83w5dmp1" path="res://hud.tscn" id="4_nk7bt"]
[ext_resource type="AudioStream" uid="uid://qqtohx7y25kp" path="res://art/gameover.wav" id="5_ishwk"]
[ext_resource type="AudioStream" uid="uid://cwt5t5kswd185" path="res://art/puffin_quack.ogg" id="7_kqb2u"]
[ext_resource type="AudioStream" uid="uid://cnqm0rwo1uloq" path="res://art/puffin_happy.ogg" id="8_q0nn1"]

[sub_resource type="Curve2D" id="Curve2D_jayiw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 960, 0, 0, 0, 0, 0, 960, 369.54, 0, 0, 0, 0, 960, 723.013, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_nc4gg")
food_scene = ExtResource("2_lergq")
enemy_scene = ExtResource("3_eoloe")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.343863, 0.599679, 1, 1)

[node name="Player" parent="." instance=ExtResource("1_8fu5u")]

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(460, 450)

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2(1, 0.995833)
curve = SubResource("Curve2D_jayiw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_nk7bt")]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ishwk")

[node name="LimitTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="OuchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kqb2u")

[node name="HappySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_q0nn1")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="LimitTimer" to="." method="_on_limit_timer_timeout"]
